Deleted .zip and added size check for canvas

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 
 	<style>
 		body{
-			margin:10px
+			margin:0px
 		}
 		canvas {
-			border: 2px solid black;
+			border: 0px solid black;
 		}
 	</style>
 </head>
 
 <body>
+	<canvas id="myCanvas"></canvas>
 </body>
 <script src="Grid.js"></script>
 <script src="Game.js"></script>
